HOTFIX!: 클러스터 내부 로직 변경